--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,4 +1,4 @@
-name: CI-Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
@@ -20,13 +20,6 @@ jobs:
         r-version: '4.4.1'
         use-public-rspm: true
         
-    - name: Cache R packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.R/renv/cache
-        key: ${{ runner.os }}-R-${{ hashFiles('**/renv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-R-
 
     - name: Install R dependencies
       run: |
@@ -40,13 +33,12 @@ jobs:
       run: |
         Rscript CI-Analysis.R
 
-
     - name: ZIP code
       run: |
         zip -r code.zip .
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: code-artifact
         path: code.zip
